syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

message SetRecipeCategoriesRequest {
  string recipeId = 1;
  string userId = 2;
  repeated string categoryIds = 3;
}

message SetRecipeCategoriesResponse {
  string message = 1;
}
