syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

message SetRecipeFavouriteStatusRequest {
  string recipeId = 1;
  string userId = 2;
  bool favourite = 3;
}

message SetRecipeFavouriteStatusResponse {
  string message = 1;
}
